@@ -10,7 +10,7 @@ mc_version=1.16.5
 forge_version=36.1.12
 
 //mod and library
-mod_version=1.0.6.2
+mod_version=1.0.6.3
 lib_version=7.1.3
 
 //mod dependencies
