@@ -16,6 +16,7 @@ v1.0.6:
 - fix Item Port not working with Composters
 - fix Item Buffer not dropping content when last piece removed
 - fix Random Block Access Controller getting stuck after load
+- fix Random Block Access Controller and Block Interaction Frame not dropping when broken
 
 v1.0.5:
 - add Interaction Frame and Random Block Access Controller
